--- a/src/App.css
+++ b/src/App.css
@@ -51,4 +51,13 @@ body {
   margin-top: 20px;
   padding: 20px;
   width: 100%;
+  font-size: 20px;
+}
+
+p.status {
+  color: white;
+  width: 230px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
